--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "user-interface for evaluating machine learning classification results",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://developers.thequestionmark.org/mlc-eval",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   }
 }
