--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "private": true,
   "homepage": "http://developers.thequestionmark.org/mlc-eval",
   "devDependencies": {
-    "gh-pages": "^0.12.0",
-    "react-scripts": "0.8.5"
+    "gh-pages": "^2.0.0",
+    "react-scripts": "2.1.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "fixed-data-table": "^0.6.3",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "redux-windowsize": "^1.3.1",
-    "responsive-fixed-data-table": "^2.0.0"
+    "fixed-data-table-2": "^1.0.0-beta.5",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "redux-windowsize": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +28,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build && rm -f build/data/* && gh-pages -d build"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "> 5%"
+  ]
 }
