--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^5.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "redux-windowsize": "^1.3.1"
