--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && rm -f build/data/* && gh-pages -d build"
+    "deploy": "npm run build && rm -Rf build/data/* && gh-pages -d build"
   },
   "browserslist": [
     "defaults",
